--- a/charts/celeborn/ci/values.yaml
+++ b/charts/celeborn/ci/values.yaml
@@ -38,44 +38,9 @@ cluster:
   # -- Specifies Kubernetes cluster name
   name: cluster
 
-# Specifies Celeborn volumes.
-# Currently supported volume types are `emptyDir` and `hostPath`.
-# Note that `hostPath` only works in hostPath type using to set `volumes hostPath path`.
-# Celeborn Master will pick first volumes for store raft log.
-# `diskType` only works in Celeborn Worker with hostPath type to manifest local disk type.
-volumes:
-  # -- Specifies volumes for Celeborn master pods
-  master:
-    - mountPath: /mnt/celeborn_ratis
-      type: emptyDir
-      size: 1Gi
-  # -- Specifies volumes for Celeborn worker pods
-  worker:
-    - mountPath: /mnt/disk1
-      type: emptyDir
-      size: 1Gi
-    - mountPath: /mnt/disk2
-      type: emptyDir
-      size: 1Gi
-
-# celeborn configurations
 celeborn:
-  celeborn.master.ha.enabled: false
   celeborn.metrics.enabled: false
-  celeborn.master.http.port: 9098
-  celeborn.worker.http.port: 9096
-  celeborn.worker.monitor.disk.enabled: false
-  celeborn.shuffle.chunk.size: 8m
-  celeborn.rpc.io.serverThreads: 64
-  celeborn.rpc.io.numConnectionsPerPeer: 2
-  celeborn.rpc.io.clientThreads: 64
-  celeborn.rpc.dispatcher.numThreads: 4
-  celeborn.worker.flusher.buffer.size: 256K
-  celeborn.worker.fetch.io.threads: 32
-  celeborn.worker.push.io.threads: 32
-  celeborn.push.stageEnd.timeout: 120s
-  celeborn.application.heartbeat.timeout: 120s
-  celeborn.worker.heartbeat.timeout: 120s
+  celeborn.worker.storage.dirs: /mnt/disk1:disktype=SSD:capacity=1Gi,/mnt/disk2:disktype=SSD:capacity=1Gi
 
 master:
   # -- Number of Celeborn master replicas to deploy, should not less than 3.
@@ -92,6 +57,11 @@ master:
   - name: TZ
     value: Asia/Shanghai
 
+  # -- Volume mounts for Celeborn master containers.
+  volumeMounts:
+  - name: celeborn-ratis
+    mountPath: /mnt/celeborn_ratis
+
   # -- Resources for Celeborn master containers.
   resources:
     requests:
@@ -100,6 +70,12 @@ master:
     limits:
       cpu: 100m
       memory: 800Mi
+
+  # -- Volumes for Celeborn master pods.
+  volumes:
+  - name: celeborn-ratis
+    emptyDir:
+      sizeLimit: 1Gi
 
   # -- DNS policy for Celeborn master pods.
   dnsPolicy: ClusterFirstWithHostNet
@@ -124,6 +100,13 @@ worker:
   - name: TZ
     value: Asia/Shanghai
 
+  # -- Volume mounts for Celeborn worker containers.
+  volumeMounts:
+  - name: disk1
+    mountPath: /mnt/disk1
+  - name: disk2
+    mountPath: /mnt/disk2
+
   # -- Resources for Celeborn worker containers.
   resources:
     requests:
@@ -132,6 +115,15 @@ worker:
     limits:
       cpu: 100m
       memory: 1Gi
+
+  # --Volumes for Celeborn worker pods.
+  volumes:
+  - name: disk1
+    emptyDir:
+      sizeLimit: 1Gi
+  - name: disk2
+    emptyDir:
+      sizeLimit: 1Gi
 
   # -- DNS policy for Celeborn worker pods.
   dnsPolicy: ClusterFirstWithHostNet
